# docling-view

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docling_view/: __init__.py  cli.py
src/docling_view/core/: __init__.py  normalizer.py  parser.py  processor.py
src/docling_view/renderers/: __init__.py  assets.py  native.py  overlay.py
src/docling_view/templates/: __init__.py
src/docling_view/utils/: __init__.py  browser.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_docling.json
tests/integration/: __init__.py  test_cli.py  test_json_pipeline.py
tests/unit/: __init__.py  test_native_renderer.py  test_normalizer.py  test_overlay_renderer.py  test_parser.py
