[project]
name = "docling-view"
version = "0.2.0"
description = "CLI tool for visualizing and validating Docling document processing output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.0",
    "docling-core>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdfium2>=4.0.0",
    "Jinja2>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
docling-view = "docling_view.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
