[project]
name = "docling-view"
version = "0.2.0"
description = "CLI tool for visualizing and validating Docling document processing output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.0",
    "docling-core>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdfium2>=4.0.0",
    "Jinja2>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-Pillow",
]

[project.scripts]
docling-view = "docling_view.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "docling_core.*",
    "pypdfium2.*",
    "jinja2.*",
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
